RESOLVED FIXED66508
WebProcess crashes during startup if libdispatch is initialized by WebProcessShim.dylib
https://bugs.webkit.org/show_bug.cgi?id=66508
Summary WebProcess crashes during startup if libdispatch is initialized by WebProcess...
Anders Carlsson
Reported 2011-08-18 16:18:37 PDT
WebProcess crashes during startup if libdispatch is initialized by WebProcessShim.dylib
Attachments
Patch (2.08 KB, patch)
2011-08-18 16:22 PDT, Anders Carlsson
mrowe: review+
Anders Carlsson
Comment 1 2011-08-18 16:22:09 PDT
Mark Rowe (bdash)
Comment 2 2011-08-18 16:39:26 PDT
Comment on attachment 104421 [details] Patch r=ugh.
Anders Carlsson
Comment 3 2011-08-19 09:22:33 PDT
Note You need to log in before you can comment on or make changes to this bug.